<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mana_hostapd_wpe"
            android:layout_gravity="center_horizontal|center" 
            android:gravity="center"
            android:padding="4dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mana_hostapd_wpe_certs"
            android:id="@+id/wpe_generate_certs"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iface"
            android:padding="4dp" />

        <EditText
            android:id="@+id/wpe_ifc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bssid"
            android:padding="4dp" />

        <EditText
            android:id="@+id/wpe_bssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssid"
            android:padding="4dp" />

        <EditText
            android:id="@+id/wpe_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel"
            android:padding="4dp" />

        <EditText
            android:id="@+id/wpe_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hostapd_private_key"
            android:padding="4dp" />

        <EditText
            android:id="@+id/wpe_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/wpe_updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>
</ScrollView>