<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    android:paddingBottom="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/commandtag"
        android:id="@+id/command_tag"
        android:paddingLeft="@dimen/base_listItem_LR"
        android:paddingRight="@dimen/base_listItem_LR"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/runCommand"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exec_mode"
        android:id="@+id/textView8"
        android:paddingLeft="@dimen/base_listItem_LR"
        android:paddingRight="@dimen/base_listItem_LR"
        android:textColor="@color/accent_material_dark"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/send_to"
        android:id="@+id/textView4"
        android:paddingLeft="@dimen/base_listItem_LR"
        android:layout_marginTop="-7dp"
        android:textColor="@color/accent_material_dark"
        android:paddingRight="@dimen/base_listItem_LR"
        android:layout_below="@+id/command_tag"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/runCommand"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/base_listItem_LR"
        android:layout_marginEnd="@dimen/base_listItem_LR"
        android:text="@string/run"
        android:textColor="@android:color/holo_blue_dark"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system"
        android:id="@+id/sendtocmd"
        android:textColor="@color/accent_material_light"
        android:layout_above="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mode"
        android:id="@+id/execmode"
        android:textColor="@color/accent_material_light"
        android:layout_below="@+id/sendtocmd"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/run_at_boot"
        android:id="@+id/textView9"
        android:paddingLeft="@dimen/base_listItem_LR"
        android:textColor="@color/accent_material_dark"
        android:paddingRight="@dimen/base_listItem_LR"
        android:layout_below="@+id/sendtocmd"
        android:layout_toStartOf="@+id/custom_comands_runAtBoot_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/yes_no"
        android:id="@+id/custom_comands_runAtBoot_text"
        android:textColor="@color/accent_material_light"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignStart="@+id/runCommand" />
</RelativeLayout>
