<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusable="true"
  		android:focusableInTouchMode="true" 
  		>
        
        <TextView
            android:id="@+id/reference_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duck_hunter_headline"
            android:layout_gravity="center_horizontal|center" 
            android:gravity="center"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/duckyscripts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_your_own_duckyscripts_at_sdcard_nh_files_duckyscripts"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/duckhunter_preset_spinner"
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/preview" />

        <EditText
            android:id="@+id/editSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/duckyLoad"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/duckySave"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
