<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.offsec.nethunter.MITMFViewModel" />
    </data>

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            app:srcCompat="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/spoof_settings" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mitmf_spoof"
            android:id="@+id/mitmf_enablespoof"
            android:onClick="@{(view) -> viewModel.clickSpoof(view)}" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            app:srcCompat="@android:drawable/divider_horizontal_bright"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/redirect_using" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mitmf_spoof_redirectspin"
            android:enabled="@{viewModel.spoofEnabled}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/arp_mode" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mitmf_spoof_arpmodespin"
            android:enabled="@{viewModel.spoofEnabled}" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.spoofEnabled}"
                    android:hint="@string/mitmf_spoof_gateway"
                    android:id="@+id/mitmf_spoof_gateway_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.spoofEnabled}"
                    android:hint="@string/mitmf_spoof_targets"
                    android:id="@+id/mitmf_spoof_targets_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mitmf_spoof_shellshock"
                android:id="@+id/mitmf_spoof_shellshock"
                android:enabled="@{viewModel.spoofEnabled}" />

            <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.shellShockEnabled}"
                    android:hint="@string/shellshock_command"
                    android:id="@+id/mitmf_spoof_shellshock_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
</ScrollView>
</layout>