<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_powershell_http_payload_allows_you_to_download_and_run_a_generic_powershell_payload_from_a_url_the_url_to_payload_should_be_in_a_location_accessible_to_the_victim"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:padding="4dp" />
        <TextView
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:text="@string/ps_payload_url"
            android:padding="4dp" />

        <EditText
            android:id="@+id/payloadUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/powershellOptionsUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>