<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"
        android:text="@string/chroot_arch"/>

    <Spinner
        android:id="@+id/f_chrootmanager_arch_adb_spr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"
        android:entries="@array/f_chrootmanager_build_chroot_arm_opts"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"
        android:text="@string/choose_install"/>

    <Spinner
        android:id="@+id/f_chrootmanager_minorfull_adb_spr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"
        android:entries="@array/f_chrootmanager_build_chroot_full_or_min"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/download_path"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"/>

    <EditText
        android:id="@+id/f_chrootmanager_storepath_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textColor="@color/clearTitle"
        android:importantForAutofill="no"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />
</LinearLayout>